gcc/testsuite/gcc.target/i386/sse2-float16-1.c
/* { dg-do compile } */
/* { dg-options "-O2 -mno-sse2" } */

_Float16/* { dg-error "is not supported on this target" } */
foo (_Float16 x) /* { dg-error "is not supported on this target" } */
{
  return x;
}
